# Microservices-Demos

./: README.md  pyproject.toml
Services/Codex/Backend/: __main__.py
Services/Scout/Backend/: __main__.py
Utils/grid_utils/: helpers.py
